# Wi-Q-Test

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py  database.py  dependencies.py  security.py  tables.py
app/modules/auth/: dependencies.py  models.py  repository.py  router.py  service.py
app/modules/menus/: __init__.py  dependencies.py  models.py  repository.py  router.py  service.py
app/modules/products/: __init__.py  dependencies.py  models.py  repository.py  router.py  service.py
docs/: openapi.json
responses/: token.json
seed/: clients.json  menu-product-sources.json
tests/: conftest.py  test_api_routes.py
tests/modules/: __init__.py
tests/modules/auth/: __init__.py  test_service.py
tests/modules/menus/: __init__.py  test_repository.py  test_service.py
tests/modules/products/: __init__.py  test_repository.py  test_service.py
